# Pentra

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  ENVIRONMENT.md  MASTER_INDEX.md  MODULE_LOG.md  README.md  docker-compose.local.yml  run_pentra_local.sh
docs/: attack_graph_engine.md  (+1 more)
pentra_core/services/api-gateway/: .env.example  pyproject.toml
pentra_core/services/api-gateway/app/: __init__.py  deps.py  main.py
pentra_core/services/api-gateway/tests/: conftest.py  test_ai_provider_router_phase9.py  test_ai_reasoning_service.py  test_ai_reasoning_session_boundaries_phase4.py  test_ai_runtime_phase7.py  test_auth_runtime_phase10.py  test_benchmark_expansion_phase7.py  test_bounded_agent_sdk_phase10.py  test_cancel_scan_phase1.py  test_execution_truth_phase7.py  test_field_validation_phase10.py  test_historical_findings_phase5.py  test_intelligence_phase5.py  test_intelligence_service.py  test_multi_target_asset_groups_phase5.py  test_pause_resume_scheduling_phase5.py  test_phase10_pack_matrix.py  test_phase8_capability_matrix.py  test_phase8_hardening.py  test_phase9_capability_matrix.py  test_release_evidence_phase7.py  test_reporting_integrations_phase5.py  test_reporting_phase7.py  test_reset1_assets.py  test_reset6_reliability.py  test_runtime_correctness_phase3.py  test_runtime_ownership_phase10.py  test_scan_create_commit_phase2.py  test_scan_idempotency_phase4.py  test_scan_planner_context_phase10.py  test_scan_profile_phase3.py  test_scan_service_phase2.py  test_target_model_service_phase9.py  test_terminal_phase1.py  test_ws_scans_phase1.py
(+601 files in other folders)
